fix overflow- probar en mobile

--- a/projects/ngx-neo-components/styles/_main.scss
+++ b/projects/ngx-neo-components/styles/_main.scss
@@ -123,6 +123,7 @@ neo-layout {
 .neo-slider {
   background: #e6e4e4;
   border-radius: 0.5rem;
+  overflow-x: hidden;
 }
 
 .navbar-toggler-icon {
